Add JSonPath Expressions to Parameter